Moved index.html to root for Github Pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guessing the number Game</title>
 
-    <link rel="stylesheet" href="/style/style.css" >
+    <link rel="stylesheet" href="style/style.css" >
 </head>
 
 
@@ -19,7 +19,7 @@
         <h1>Guess the number if you can</h1>
         
         <div id="photo"> 
-            <img src="/assets/congrats.webp" >
+            <img src="assets/congrats.webp" >
         </div>
 
 
@@ -60,7 +60,7 @@
 
 
 
-    <script src="/script/script.js"> </script>
+    <script src="script/script.js"> </script>
 </body>
 
 
